# cpp-inference-engine

./: CMakeLists.txt  README.md  export_lstm.py
model/: lstm_model.onnx
src/: main.cpp
